--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 pyyaml
-torch==1.10.1
-torchvision==0.11.2
+torch
+torchvision
 numpy
 matplotlib
 brewer2mpl
-opencv-python==4.0.1.23
-opencv-contrib-python==4.0.1.23
-tensorboard==1.14
+opencv-python
+opencv-contrib-python
+tensorboard
 omegaconf
 tqdm
 future  # tensorboard dependency
